00_extras/12_kong_test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: kong
  rules:
  - host: backend.example.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: backend
              port:
                number: 80
  - host: frontend.example.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend
              port:
                number: 80
